# HW3-Clustering

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
