[build-system]
requires = [
        "flit_core >=3.2,<4",
        "python_version >= '3.7'"
        ]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "clustering"
authors = [{name = "Karson Chrispens", email = "karson.chrispens@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy",
    "sklearn",
    "scipy",
    "matplotlib"
]

[project.urls]
Home = "https://github.com/KCore1/HW3-Clustering.git"